[package]
name = "linear-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clipboard = "0.5.0"
env_logger = "0.10.1"
graphql_client = "0.13.0"
inquire = "0.6.2"
log = "0.4.20"
prettytable-rs = "0.10.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
